# taskpipe

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: etl_pipeline.yaml  parallel_checks.yaml  transform.py
taskpipe/: __init__.py  cli.py  models.py
taskpipe/executors/: __init__.py  python_executor.py  shell_executor.py
taskpipe/scheduler/: __init__.py  pipeline.py  reporter.py  runner.py  task_runner.py
taskpipe/utils/: __init__.py  config_loader.py  logger.py
tests/: test_config_loader.py  test_executors.py  test_pipeline.py  test_task_runner.py
